# technical-interview

./: first_insights.md  pyproject.toml  technical-test.ipynb
.ipynb_checkpoints/: technical-test-checkpoint.ipynb
scripts/: monitor_downloads.sh  move_latest.sh  run_main_script.sh
src/: main.py
src/data_understanding/: dataset_reader.py
src/model/: models.py
src/problem_statement_synthesizer/: files_metadata_retriever.py  insights_report_create.py  ps_summerizer.py
